# atfits-rs

./: .pre-commit-config.yaml  Cargo.toml  README.md
.github/workflows/: cd.yml  ci.yml
src/: error.rs  header.rs  image.rs  keys.rs  lib.rs  mem_header.rs  path.rs  pixel.rs
tests/: roundtrip.rs
